[package]
name = "obj"
version = "0.1.0"
edition = "2021"

[features]
auth = []
data = []
crypto = []
id = []
oauth = ["yup-oauth2"]

[dependencies]
ron = "0.7.0"
bincode = "1.3.3"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
mime = "0.3.16"
regex = "1.5.4"
rusty_ulid = "0.11.0"
uuid = { version = "0.8", features = ["serde"] }
yup-oauth2 = { version = "5.1.0", optional = true }
blake3 = "1.0.0"
hashbrown = "0.11.2"
rand = "0.8.0"
sha2 = "0.9.5"
hex = "0.4.3"
ulid = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "0.8", features = ["wasm-bindgen"] }
